test/statements/bradc/loops/modifyIndices.good
modifyIndices.chpl:2: error: cannot assign to const variable
